--- a/eclipse/org.imixs.eclipse.bpmn2/README
+++ b/eclipse/org.imixs.eclipse.bpmn2/README
@@ -7,7 +7,8 @@ But this is still not clear??? See also Extension point 'CustomTask'
 
 
 
-Man muss rausfinden wie man bestimmt welche Elemente in der runtime verfügbar sidn und welche nicht
+We need to clearify how to hide or show specific model elements
+in our runtime
  
 
 
