--- a/eclipse/org.imixs.eclipse.bpmn2/README
+++ b/eclipse/org.imixs.eclipse.bpmn2/README
@@ -7,6 +7,12 @@ But this is still not clear??? See also Extension point 'CustomTask'
 
 
 
+Icons
+-------------
+https://www.iconfinder.com/mrcolinp
+https://lastcallmedia.com/
+
+
 
  
 
