--- a/eclipse/org.imixs.eclipse.bpmn2/README
+++ b/eclipse/org.imixs.eclipse.bpmn2/README
@@ -14,6 +14,13 @@ https://lastcallmedia.com/
 
 
 
+Eclipse Plugin dependencies
+-----------------------------
+graphiti 0.12.0:  http://download.eclipse.org/graphiti/updates/0.12.0/
+bpmn2: 1.2.0: http://download.eclipse.org/bpmn2-modeler/updates/mars/1.2.0
+
+
+
  
 
 
